--- a/challenges/THE BOX/page.html
+++ b/challenges/THE BOX/page.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 	<title>The Box</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<div class="row">
+	<div class="row" id="first-row">
 		<div class="green-dark" style="width:140px;height:195px;float:left"></div>
 		<div class="green-light" style="width:140px;height:195px;float:left;clear:left;"></div>
 		<div class="yellow" style="width:400px;height:400px;"></div>
